kubernetes/components/cache/dragonfly/networkpolicy-prometheus-metrics.yaml
---
# yaml-language-server: $schema=https://schemas.sstr.dev/networking.k8s.io/networkpolicy_v1.json
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ${APP}-dragonfly-prometheus-metrics
spec:
  podSelector:
    matchLabels:
      app: ${APP}-dragonfly
      app.kubernetes.io/name: dragonfly
      app.kubernetes.io/part-of: dragonfly
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: observability
          podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus
      ports:
        - protocol: TCP
          port: 9999
